# trpc-agent-python

./: .codeccignore  .flake8  .gitignore  .yapfignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  INSTALL.zh_CN.md  LICENSE  README.md  README.zh_CN.md  build.sh  build_mac.sh  build_mac_uv.sh  clean.sh  coverage.sh  dist_pkg.sh  format.py  format.sh  lint_flake8.sh  mkdocs.yml  normal-pr-test.txt  pyproject.toml  requirements-test.txt  requirements.txt  run_example.sh  run_examples_from_streaming_tool_complex.py  session_memory_summary_diff_report.json  stop.sh  tool_safety_audit.jsonl  tool_safety_policy.yaml  tool_safety_report.json
examples/skills_code_review_agent/: .env.example  .gitignore  ACCEPTANCE_CHECKLIST.md  DESIGN.md  DESIGN.zh_CN.md  DESIGN_NOTE.md  DEVELOPMENT_PLAN.md  Dockerfile.scanners  PR_READINESS.md  README.en.md  README.md  README.zh_CN.md  __init__.py  agent.py  agent_sdk_entry.py  ai-prompts.md  cli.py  config.py  conftest.py  diff_parser.py  dry_run.py  evaluate.py  evaluate_fixtures.py  models.py  monitor.py  progress.py  pyproject.toml  query_task.py  redaction.py  reporting.py  requirements.txt  review_agent.py  review_policy.yaml  review_report.json  review_report.md  rules.py  run_agent.py  run_review.py  sandbox.py  schema.sql  (+5 more)
examples/skills_code_review_agent/agent/: __init__.py  agent.py  ast_analyzer.py  config.py  cr_skill.py  dedup.py  diff_parser.py  fake.py  fake_model.py  filter.py  filter_policy.py  filtering.py  findings.py  llm_layer.py  model.py  models.py  native_agent.py  native_filter.py  normalization.py  pipeline.py  prompts.py  redaction.py  report.py  reporting.py  review_engine.py  review_graph.py  rule_config.py  rule_engine.py  rules.py  rules_engine.py  runtime_factory.py  sandbox.py  skill_loader.py  skill_smoke.py  storage.py  telemetry.py  tools.py
examples/skills_code_review_agent/codereview/: __init__.py  config.py  diff_parser.py  findings.py  governance.py  inputs.py  llm_summary.py  metrics.py  pipeline.py  redaction.py  report.py  sandbox.py
examples/skills_code_review_agent/db/: __init__.py  init_db.py  storage.py
examples/skills_code_review_agent/doc/: design.md  design_zh.md
examples/skills_code_review_agent/docs/: DESIGN.md  G1_OVERVIEW.md  PHASE0_OVERVIEW.md  PHASE1_OVERVIEW.md  PHASE2_OVERVIEW.md  PHASE7_LLM_OVERVIEW.md  design.md
examples/skills_code_review_agent/evals/: __init__.py  cr_agent.evalset.json  eval_config.json  hidden_samples.py  run_hidden_eval.py  test_cr_agent.py
examples/skills_code_review_agent/examples/: review_report.json  review_report.md
examples/skills_code_review_agent/filters/: __init__.py  policy.json  policy.py  sandbox_filter.py  sdk_filter.py  secret_filter.py
examples/skills_code_review_agent/filters_cr/: __init__.py  governance_filter.py
examples/skills_code_review_agent/fixtures/: __init__.py  ast_taint.diff  async_leak.diff  async_resource_leak.diff  broad_except.diff  clean.diff  database.diff  db_connection_lifecycle.diff  db_lifecycle.diff  db_lifecycle_issue.diff  duplicate.diff  duplicate_finding.diff  duplicate_findings.diff  entropy_secret.diff  expected_findings.json  external_scanner.diff  hidden_like_multiline.diff  ignore_rule.diff  llm_fixtures.py  missing_test.diff  missing_tests.diff  missing_timeout.diff  no_issue.diff  resource_leak.diff  resource_lifecycle_closed.diff  sandbox_failure.diff  sandbox_large_output.diff  sandbox_secret_output.diff  sandbox_timeout.diff  secret.diff  secret_leak.diff  secret_redaction.diff  secret_redaction_extended.diff  security.diff  security_eval.diff  security_issue.diff  sql_injection.diff  test_missing.diff
examples/skills_code_review_agent/inputs/: __init__.py  models.py  parser.py
examples/skills_code_review_agent/knowledge/: __init__.py  coding_standards.md  knowledge_base.py
examples/skills_code_review_agent/monitoring/: __init__.py  audit.py
examples/skills_code_review_agent/output_samples/: review_report.json  review_report.md
examples/skills_code_review_agent/outputs/: review_report.json  review_report.md  review_report.sarif
examples/skills_code_review_agent/pipeline/: __init__.py  ast_analyzer.py  config.py  dedup.py  diff_parser.py  engine.py  filter_chain.py  policy.py  redaction.py  report.py  sandbox.py  sarif_output.py  scanners.py  telemetry.py  types.py
examples/skills_code_review_agent/reports/: .gitkeep  __init__.py  generator.py  models.py  writers.py
examples/skills_code_review_agent/review/: __init__.py  diff_input.py  findings.py  governance.py  llm_review.py  pipeline.py  redaction.py  report.py  sandbox.py
examples/skills_code_review_agent/sample_output/: review_report.json  review_report.md
examples/skills_code_review_agent/sample_outputs/: review_report.json  review_report.md
examples/skills_code_review_agent/sandbox/: Dockerfile  __init__.py  base.py  container.py  cube.py  docker.py  factory.py  fake.py  lazy.py  local.py
examples/skills_code_review_agent/server/: __init__.py  a2a_server.py  agui_server.py
examples/skills_code_review_agent/src/: __init__.py  deduper.py  diff_parser.py  filter_policy.py  input_loader.py  redactor.py  report_writer.py  review_types.py  rule_engine.py  telemetry.py
examples/skills_code_review_agent/storage/: __init__.py  base.py  cr_repository.py  dao.py  factory.py  migrations.py  models.py  postgres_schema.sql  postgresql.py  records.py  schema.sql  schema_loader.py  sqlite.py  sqlite_repository.py  store.py
examples/skills_code_review_agent/tests/: __init__.py  conftest.py  evaluate_fixtures.py  helpers.py  run_docker_tests.py  run_postgres_tests.py  run_tests.py  test_acceptance.py  test_agent.py  test_ast_analyzer.py  test_checkers.py  test_cli.py  test_cli_and_report.py  test_code_review_agent.py  test_container_runtime.py  test_cr_agent.py  test_dedup.py  test_dedup_noise.py  test_diff_parser.py  test_diffparse.py  test_edge_cases.py  test_filter.py  test_filter_chain.py  test_findings.py  test_fixture_evaluation.py  test_fixtures_e2e.py  test_governance.py  test_governance_filter.py  test_llm_layer.py  (+29 more)
(+3342 files in other folders)
