[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "trpc_agent_sdk/version.py"

[project]
name = "trpc-agent-py"
dynamic = ["version"]
description = "Python LLM agent framework with multi-model support (OpenAI, Anthropic, Gemini, DeepSeek), tool calling, session management, A2A/MCP/AGUI protocols, and FastAPI server integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tencent", email = "team@tencent.com"}
]
keywords = ["trpc", "agent", "llm", "ai", "langchain", "langgraph", "mcp", "a2a", "fastapi", "multi-agent", "tool-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.11.3",
    "openai>=1.3.0",
    "mcp>=1.10.1",
    "aiohttp",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "google-genai>=1.24.0",
    "graphviz",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http<2.0.0,>=1.28.0",
    "fastapi>=0.95.0",
    "uvicorn",
    "langgraph",
    "langchain>=0.3.27",
    "tzlocal",
    "PyMySQL",
    "aiomysql",
    "SQLAlchemy",
    "redis>=6.2.0",
    "langchain-deepseek",
    "docker",
    "anthropic>=0.72.1",
    "python-magic>=0.4.27",
    "jinja2>=3.1.0", # BSD License
    "PyYAML>=6.0.3",
    "rapidfuzz>=3.0.0",
    "charset-normalizer>=3.0.0",
    "typer>=0.12.0", # MIT License
]

[project.optional-dependencies]
ag-ui = [
    "ag-ui-protocol>=0.1.8",
]
langfuse=[
    "opentelemetry-sdk<2.0.0,>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http<2.0.0,>=1.28.0",
]

knowledge = [
    "numpy>=2.2.5",
    "langchain_community>=0.3.27",
    "langchain_huggingface>=0.1.0"
]

agent-claude = [
    "claude-agent-sdk>=0.1.3",
    "cloudpickle>=2.0.0",
]

eval = [
    "pytest",
    "pytest-asyncio",
    "rouge-score",
    "pandas",
    "tabulate",
]

mem0 = [
    "mem0ai>=1.0.3",
    "sentence-transformers",
]
dev = [
    "protobuf>=5.29.5",
    "numpy>=2.2.5",
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "yapf",
    "langchain_community>=0.3.27",
    "langchain_huggingface>=0.1.0",
    "ag-ui-protocol>=0.1.8",
    "claude-agent-sdk>=0.1.3",
    "cloudpickle>=2.0.0",
]

all = [
    "protobuf>=5.29.5",
    "numpy>=2.2.5",
    "langchain_community>=0.3.27",
    "langchain_huggingface>=0.1.0",
    "ag-ui-protocol>=0.1.8",
    "claude-agent-sdk>=0.1.3",
    "pytest",
    "pytest-asyncio",
    "rouge-score",
    "pandas",
    "tabulate",
    "anfs>=0.0.3",
    "trag>=0.0.67",
    "mem0ai>=1.0.3",
    "trag-client>=0.9.3",
    "trag-langchain>=0.0.67",
    "trag-tools-sdk>=0.0.67",
    "trpc>=0.9.1; sys_platform != 'win32'",
    "trpc-pb==0.5.0a0; sys_platform != 'win32'",
    "trpc_redis>=0.2.0a0; sys_platform != 'win32'",
    "trpc_a2a[redis]>=0.2.3; sys_platform != 'win32'",
    "trpc_mcp>=0.2.1a0; sys_platform != 'win32'",
]

[project.scripts]
trpc_agent_server = "trpc_agent.server._cli:main"

# 使用 include 保证三个包都包含进来
[tool.hatch.build.targets.wheel]
packages = ["trpc_agent_sdk"]

[project.urls]
Homepage = "http://git.woa.com/trpc-python/trpc-agent.git"
Documentation = "https://git.woa.com/trpc-python/trpc-agent/wikis/home"
Repository = "http://git.woa.com/trpc-python/trpc-agent.git"



# 可选：添加工具配置
[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
  | env
  | node_modules
)/
'''

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
indent_width = 4
split_before_logical_operator = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
